Contact form functionality and cosmetics

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="box-simple">
                         <div class="icon"><i class="pe-7s-phone"></i></div>
-                        <h4 class="heading margin-bottom">Contact</h4>
+                        <h4 class="heading margin-bottom">Phone</h4>
                         <p class="text-muted">Ronnie Coon, Lodge Secretary</p>
                         <p><strong>225.963.0274</strong></p>
                     </div>
@@ -94,36 +94,30 @@
                     <div class="icon"><i class="pe-7s-pen"></i></div>
                     <h4 class="heading margin-bottom">Contact form</h4>
                     <p class="text-muted">Use the form below to send us a direct message and we'll get back to you as soon as possible.</p>
-                    <form>
+                    <form accept-charset="UTF-8" action="https://usebasin.com/f/2ce005e7c9f2" method="POST">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <div class="form-group">
-                                    <label for="firstname">Firstname</label>
-                                    <input id="firstname" type="text" class="form-control">
+                                    <label for="name">Name</label>
+                                    <input id="name" type="text" class="form-control" name="name">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="lastname">Lastname</label>
-                                    <input id="lastname" type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input id="email" type="text" class="form-control">
+                                    <input id="email" type="email" class="form-control" name="email">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input id="subject" type="text" class="form-control">
+                                    <input id="subject" type="text" class="form-control" name="subject">
                                 </div>
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea id="message" class="form-control"></textarea>
+                                    <textarea id="message" class="form-control" name="message"></textarea>
                                 </div>
                             </div>
                             <div class="col-sm-12">
