Edited contact-thanks page

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -65,7 +65,7 @@
     </section>
     <section class="section--no-padding">
         <div class="container intro-text">
-            <p class="lead">In the meantime, feel free to read <a href="about.html">more about Denham Springs Lodge #297</a>, or about <a href="https://la-mason.com/what-is-freemasonry/">Freemasonry in general</a>.</p>
+            <p>In the meantime, feel free to read <a href="about.html">more about Denham Springs Lodge #297</a>, or about <a href="https://la-mason.com/what-is-freemasonry/">Freemasonry in general</a>.</p>
             <p><a href="contact.html" class="btn btn-ghost">Back to Contact</a></p>
         </div>
     </section>
