Added Photos page and edited Contact page

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -63,9 +63,9 @@
             <p class="lead">Someone will get back to you soon!</p>
         </div>
     </section>
-    <section class="section--no-padding">
-        <div class="container intro-text">
-            <p>In the meantime, feel free to read <a href="about.html">more about Denham Springs Lodge #297</a>, or about <a href="https://la-mason.com/what-is-freemasonry/">Freemasonry in general</a>.</p>
+    <section>
+        <div class="container">
+            <p class="lead">In the meantime, feel free to read <a href="about.html">more about Denham Springs Lodge #297</a>, or about <a href="https://la-mason.com/what-is-freemasonry/">Freemasonry in general</a>.</p>
             <p><a href="contact.html" class="btn btn-ghost">Back to Contact</a></p>
         </div>
     </section>
