--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
                 <div class="col-lg-4">
                     <div class="box-simple">
                         <div class="icon"><i class="pe-7s-map-2"></i></div>
-                        <h4 class="heading margin-bottom">Address</h4>
-                        <p>313 Benton St.<br />Denham Springs, LA 70726</p>
+                        <h4 class="heading margin-bottom">Mailing Address</h4>
+                        <p>P.O. Box 1032<br />Denham Springs, LA 70727-1032</p>
                     </div>
                     <div class="box-simple">
                         <div class="icon"><i class="pe-7s-phone"></i></div>
